# autonomous_navigation

./: CMakeLists.txt  README.md  ScanSegment.py  package.xml
launch/: Autonomous_Navigation.launch  Complete.launch  Monitor_System.launch  autonomous_navigation.launch  collision_detector.launch  create_map.launch  get_image.launch  get_laser.launch  get_objects.launch  laser_with_image.launch  nav_to_goal.launch  track_position.launch  vicon_tracker.launch
msg/: LaserAtPosition.msg  MapData.msg  ObjectsAtPosition.msg  Position.msg  ScanAtPosition.msg
src/: LaserPoint.py  ScanSegment.py  __init__.py  get_image.py  get_laser.py  warning_level.py
src/Lib/: ScanSegment.py  WarningLevel.py
src/TESTING_LASER/: testing_laser.py
src/backup/: get_objects2.py  get_objects_old.py
src/collision_detector/: ScanSegment.py  collision_detector.py  warning_level.py
src/create_map/: create_map.py
src/find_path/: astar.py  code.py  find_path.py
src/get_image/: get_image.py  pedroGetImage.py
src/get_laser/: ScanSegment.py  get_laser.py  warning_level.py
src/get_objects/: ScanSegment.py  get_laser.py  get_objects.py
src/move/: move.py
src/nav2goal/: nav2goal.py
src/track_position/: ScanSegment.py  track_position.py
src/vicon_tracker/: vicon_tracker.py
