<?xml version="1.0"?>
<package format="2">
  <name>autonomous_navigation</name>
  <version>0.0.0</version>
  <description>The autonomous_navigation package. Provides a variety of packages that can 
  provide autonomous navgiation functionality to the Summit_XL robot.</description>

  <maintainer email="joshpaveley@gmail.com">Josh Paveley</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/CNCR-NTU/autonomous_navigation</url>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
